[package]
name = "twofa-cli"
version = "0.1.0"
edition = "2024"
authors = ["azamtoiri azamtoiri@gmail.com"]
description = "A sleek, interactive TUI 2FA authenticator written in Rust."
readme = "README.md"
repository = "https://github.com/azamtoiri/twofa-cli"
license = "MIT"
keywords = ["tui", "2fa", "totp", "authenticator", "ratatui"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
totp-rs = { version = "5.7.1" }
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
ratatui = "0.30.0"
crossterm = "0.29.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
aes-gcm = "0.10.1"
argon2 = "0.5.0"
rand = "0.8"
url = "2.5.8"
thiserror = "2.0.18"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1"
arboard = "3.4"
